# SelfEvolvingHarnessTS

./: .gitattributes  .gitignore  AGENTS.md  BUILD.md  EXECUTION_LOG.md  ONBOARDING.md  README.md  TSharness_vNext_Implementation_Plan.md  WINDOWS_M0_HANDOFF.md  __init__.py  augment_corpus.py  confirmatory_corpus.py  confirmatory_freeze.py  confirmatory_reporter.py  e32_nested.py  e32_policy.py  family0_actions.py  freeze_init_harness.py  nested_supply.py  pytest.ini  readiness_gym.py  run_batch_scan.py  run_benchmark.py  run_block_gate.py  run_c1_lite.py  run_calibrate_dstruct.py  run_calibrate_eps.py  run_classify_longrun.py  run_compare_v2.py  run_confirmatory.py  run_e32.py  run_evolve_longrun.py  run_family0.py  run_family0_final.py  run_fast_path_ablation.py  run_gym_b1b.py  run_harness_slice.py  run_l5.py  run_main_table.py  run_mpilot.py  (+27 more)
benchmark/: __init__.py  aggregate.py  baselines.py  corruption.py  datasets.py  dev_eval.py  ledger.py  materialize.py  method_api.py  probe.py  programs.py  registry.py  report.py  runner.py  sources.py  spatial.py  split.py  trainers.py  workspace.py
cli/: __init__.py  minipipe.py
conditioning/: __init__.py  binning.py  distance.py  key.py  p1a.py  period.py  router.py  thresholds.py
config/: __init__.py  thresholds.py
contracts/: __init__.py  candidate.py  canonical.py  harness.py  method.py  observables.py  program.py  public_boundary.py  run_context.py  task.py
data/: BENCHMARK_DATA.md  __init__.py  load_ecg5000.py  load_real.py  synthetic_gen.py
evaluators/: base.py  (+17 more)
vnext/environment/: README.md  pyproject.toml
(+1182 files in other folders)
