[project]
name = "tsharness-vnext-environment"
version = "0.1.0"
requires-python = "==3.10.19"
dependencies = [
  "numpy==2.2.6",
  "scipy==1.15.2",
  "statsmodels==0.14.6",
  "PyWavelets==1.8.0",
  "scikit-learn==1.7.2",
  "pandas==2.3.3",
  "pyarrow==19.0.1",
  "h5py==3.13.0",
  "tables==3.10.1",
  "joblib==1.5.3",
  "requests==2.32.5",
  "torch==2.12.0",
  "chronos-forecasting==2.3.0",
  "pytest==8.4.2",
]

[tool.uv]
package = false
python-preference = "only-managed"
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
]
